<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_large" />

        <LinearLayout
            android:id="@+id/top_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/user_profile_photo"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginLeft="130dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/custom_button1"
                    android:elevation="5dp"
                    android:padding="0dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/profile" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_mlarge"
                    android:layout_marginTop="@dimen/spacing_large"
                    android:layout_marginRight="@dimen/spacing_mlarge"
                    android:layout_marginBottom="@dimen/spacing_middle"
                    android:text="@string/setting_group_profile"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/grey_20"
                    app:fontFamily="sans-serif-medium" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:minHeight="?attr/actionBarSize"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/spacing_mlarge"
                    android:paddingRight="@dimen/spacing_mlarge">

                    <TextView
                        android:id="@+id/userName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/colorTextAction" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_subtitle_name"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                        android:textColor="@color/grey_20" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorSeparator" />


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/top_layout"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="?attr/actionBarSize"
                android:orientation="vertical"
                android:paddingLeft="@dimen/spacing_mlarge"
                android:paddingRight="@dimen/spacing_mlarge">

                <TextView
                    android:id="@+id/profileEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/colorTextAction" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_subtitle_email"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@color/grey_20" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:gravity="center_vertical"
                android:minHeight="?attr/actionBarSize"
                android:orientation="vertical"

                android:paddingLeft="@dimen/spacing_mlarge"
                android:paddingRight="@dimen/spacing_mlarge">

                <EditText
                    android:id="@+id/profilePhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/colorTextAction" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_title_phone"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@color/grey_20" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:gravity="center_vertical"
                android:minHeight="?attr/actionBarSize"
                android:orientation="vertical"
                android:paddingLeft="@dimen/spacing_mlarge"
                android:paddingRight="@dimen/spacing_mlarge">

                <EditText
                    android:id="@+id/profileMajor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/colorTextAction" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_title_major"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@color/grey_20" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="?attr/actionBarSize"
                android:orientation="vertical"
                android:paddingLeft="@dimen/spacing_mlarge"
                android:paddingRight="@dimen/spacing_mlarge">

                <EditText
                    android:id="@+id/profileAboutMe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:inputType="text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/colorTextAction" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_title_about_me"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@color/grey_20" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/spacing_large"
                android:paddingVertical="@dimen/spacing_medium">

                <TextView
                    android:id="@+id/edit_profile"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_xmlarge"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="saveInfo"
                    android:text="Save Info"
                    android:textAllCaps="true"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                    android:textColor="@color/grey_60" />

                <TextView
                    android:id="@+id/login_logout"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_xmlarge"
                    android:layout_weight="1"
                    android:background="@drawable/btn_dark"
                    android:backgroundTint="@color/purple_500"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="signOutUser"
                    android:text="@string/logout_title"
                    android:textAllCaps="true"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                    android:textColor="@color/colorBackground" />


            </LinearLayout>

            <Button
                android:id="@+id/profileGoHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="goHome"
                android:text="Home" />


        </LinearLayout>
    </RelativeLayout>
</ScrollView>
