...
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp">

            <Button
                android:id="@+id/acceptResponse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:onClick="acceptInvitation"
                android:orientation="horizontal"
                android:text="Accept"
...
                app:layout_constraintHorizontal_bias="0.65"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.947" />

            <Button
                android:id="@+id/visitResponderProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="visitProfile"
                android:orientation="horizontal"
                android:text="Visit Responder's Profile"
                android:textSize="10sp"
...
